--- a/QuanLyQuanCafe/QuanLyQuanCafe.csproj
+++ b/QuanLyQuanCafe/QuanLyQuanCafe.csproj
@@ -54,25 +54,25 @@
     <Compile Include="BUS\LOGIN_BUS.cs" />
     <Compile Include="DAO\LOGIN_DAO.cs" />
     <Compile Include="DTO\LOGIN_DTO.cs" />
-    <Compile Include="frmLogin.cs">
+    <Compile Include="VIEW\frmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmLogin.Designer.cs">
+    <Compile Include="VIEW\frmLogin.Designer.cs">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmMain.cs">
+    <Compile Include="VIEW\frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmMain.Designer.cs">
+    <Compile Include="VIEW\frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
     <Compile Include="DAO\ConnectToSql.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="frmLogin.resx">
+    <EmbeddedResource Include="VIEW\frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmMain.resx">
+    <EmbeddedResource Include="VIEW\frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
