add FoodCateGory, FoodUnit

--- a/QuanLyQuanCafe/QuanLyQuanCafe.csproj
+++ b/QuanLyQuanCafe/QuanLyQuanCafe.csproj
@@ -66,18 +66,24 @@
     <Compile Include="BUS\BillDetails_BUS.cs" />
     <Compile Include="BUS\BillTable_BUS.cs" />
     <Compile Include="BUS\Bill_BUS.cs" />
+    <Compile Include="BUS\FoodCategory_BUS.cs" />
+    <Compile Include="BUS\FoodUnit_BUS.cs" />
     <Compile Include="BUS\Food_BUS.cs" />
     <Compile Include="BUS\LOGIN_BUS.cs" />
     <Compile Include="BUS\Table_BUS.cs" />
     <Compile Include="DAO\BillDetails_DAO.cs" />
     <Compile Include="DAO\BillTable_DAO.cs" />
     <Compile Include="DAO\Bill_DAO.cs" />
+    <Compile Include="DAO\FoodCategory_DAO.cs" />
+    <Compile Include="DAO\FoodUnit_DAO.cs" />
     <Compile Include="DAO\Food_DAO.cs" />
     <Compile Include="DAO\LOGIN_DAO.cs" />
     <Compile Include="DAO\Table_DAO.cs" />
     <Compile Include="DTO\BillDetails_DTO.cs" />
     <Compile Include="DTO\BillTable_DTO.cs" />
     <Compile Include="DTO\Bill_DTO.cs" />
+    <Compile Include="DTO\FoodCategory_DTO.cs" />
+    <Compile Include="DTO\FoodUnit_DTO.cs" />
     <Compile Include="DTO\Food_DTO.cs" />
     <Compile Include="DTO\LOGIN_DTO.cs" />
     <Compile Include="DTO\Table_DTO.cs" />
