--- a/QuanLyQuanCafe/App.config
+++ b/QuanLyQuanCafe/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="QuanLyQuanCafe.Properties.Settings.QuanLyQuanCafeConnectionString"
-            connectionString="Data Source=dell\sqlexpress2008;Initial Catalog=QuanLyQuanCafe;Integrated Security=True"
+            connectionString="Data Source=.;Initial Catalog=QuanLyQuanCafe;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
